templates/ingres.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
annotations:
ingressclass.kubernetes.io/is-default-class: "true"
spec:
  rules:
  - host: "ingress.com"
    http:
      paths:
      - pathType: Prefix
        path: "/example"
        backend:
          service:
            name: webhook-eventsource-svc
            port:
              number: 12000
